tests/snapshots/acceptance__r#async.snap
---
source: tests/acceptance_tests.rs
expression: lines
---

running 2 tests
test test_cases::works_seamlessly_with_tokio::_100i32_expects_100usize ... ok
test test_cases::works_seamlessly_with_async_std::_100i32_expects_100usize ... ok

test result: ok. 2 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out


running 0 tests

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out


